Bug 75975 - FILESAVE : LO crashes while saving the DOCX file containing charts.
Summary: FILESAVE : LO crashes while saving the DOCX file containing charts.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium major
Assignee: Ravindra Vidhate
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-10 11:08 UTC by Ravindra Vidhate
Modified: 2014-03-12 05:02 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Chart (17.83 KB, application/msword)
2014-03-10 11:08 UTC, Ravindra Vidhate
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ravindra Vidhate 2014-03-10 11:08:59 UTC
Created attachment 95499 [details]
Chart

1. Open DOCX file containing Charts
2. Save this file into DOCX format.
3. LO crashed while saving/exporting to DOCX format.
Comment 1 Commit Notification 2014-03-12 01:01:52 UTC
Ravindra Vidhate committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ede99e0daa0701e2d8568d7ed00e2221a4f6a9f6

fdo#75975 crash while saving the DOCX file containing charts



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.