fdo#75975 crash while saving the DOCX file containing charts

1. Open DOCX file containing Charts
2. Save this file into DOCX format.
3. LO crashed while saving/exporting to DOCX format.

Conflicts:
	chart2/qa/extras/chart2export.cxx

Change-Id: I14d4f2c214ce3513b4bd14831771d72498e4486d